# Copyright 2024 3WEBS LLC
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vector-browser"
version = "0.1.0"
authors = [
    "Gavin John <admin@3webs.org>"
]
edition = "2018"
description = "TODO"
documentation = "TODO"
readme = "./README.md"
homepage = "https://github.com/3webs-org/vector"
repository = "https://github.com/3webs-org/vector"
license = "GPL-3.0-or-later"

[package.metadata]
application_id = "org.3webs.vector"
human_readable_name = "Vector"
issue_url = "https://github.com/3webs-org/vector/issues"
developer_name = "3WEBS LLC"
copyright = "© 2024 3WEBS LLC"

[dependencies]
gtk4 = { version = "0.8.1", features = ["v4_2", "v4_4", "v4_6", "v4_8", "v4_10"] }
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
webkit6 = { version = "0.3.0", features = ["v2_42"] }

[dependencies.adw]
package = "libadwaita"
version = "0.6.0"
features = ["v1_2", "v1_1", "v1_3", "v1_4"]

[build-dependencies]
glib-build-tools = "0.19.0"
